--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jingwang6028/YelpCamp-ColtWeb#readme",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.13.2",
     "cloudinary": "^1.28.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
